--- a/UserInterface/src/styles/_colors.scss
+++ b/UserInterface/src/styles/_colors.scss
@@ -3,3 +3,6 @@ $font-color: #000000;
 $input-font-color: #4b5563;
 $border-color: #898989;
 $light-theme-color: #009948;
+$selection-color: #E0EEFF;
+$dark-selection-color: #C1DDFF;
+$selection-border-color: #3885DF;
