--- a/UserInterface/src/components/fileObserver/UI/FileObserverItem/FileObserverItem.scss
+++ b/UserInterface/src/components/fileObserver/UI/FileObserverItem/FileObserverItem.scss
@@ -7,13 +7,22 @@
     border: 1px solid #fff;
     padding: 5px;
 
+    .entryName {
+
+        width: 50%;
+
+        &.editable {
+            
+        }
+    }
+
     &:hover {
-        background-color: #E0EEFF;
+        background-color: c.$selection-color;
     }
 
     &.clicked {
-        background-color: #C1DDFF;
-        border: 1px solid #3885DF;
+        background-color: c.$dark-selection-color;
+        border: 1px solid c.$selection-border-color;
     }
 
 
